# yafl

./: .gitignore  Cargo.toml  Makefile  README.md  build.bat  build.py  compile_commands.json  go.mod  main.go  out_profile.json  s6.json  utils.go
.cache/clangd/index/: main.c.5DAE88BBCCF94383.idx  utils.c.1365405C3C3E9503.idx  utils.h.AB6B02BBA3F66145.idx
launcher/: launcher.go  mods.go
src/: data.rs  main.c  main.rs  utils.c  utils.h  utils.rs
src/utils/: args.rs  data.rs  mod.rs
utils/: args.go  data.go  launcher.go  win32.go
