[package]
name = "yafl"
version = "0.1.0"
edition = "2024"

[dependencies]
ntapi = "0.4.1"
winapi = "0.3.9"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
