[package]
name = "yafl"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.28", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
]}
